# neopuck

./: .gitignore  CLAUDE.md  CMakeLists.txt  IPHONE.md  README.md  partitions.csv  sdkconfig.defaults
bridge/: .env.example  DEPLOY.md  Dockerfile  README.md  audio_util.py  docker-compose.yml  neopuck-bridge.service  neopuck_openai_bridge.py  neopuck_openclaw_bridge.py  openclaw_client.py
components/waveshare_bsp/: CMakeLists.txt  bsp_audio.c  bsp_buttons.c  bsp_display.c  bsp_i2c.c  bsp_internal.h  bsp_pins.h  bsp_power.cpp  idf_component.yml
main/: CMakeLists.txt  agent_client.c  agent_client.h  app_main.c  app_state.h  audio_pipeline.c  audio_pipeline.h  config_store.c  config_store.h  idf_component.yml  provisioning.c  provisioning.h
main/board/: board.h
main/miniapps/: miniapp.c  miniapp.h  miniapp_qr.c  miniapp_stopwatch.c
main/ui/: assets_logo.c  ui.c  ui.h
scripts/: build.sh  flash.sh  pack.sh
tools/flasher/: README.md  flash.py  requirements.txt
